--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
   },
   "devDependencies": {
     "concurrently": "^5.3.0",
-    "elm-hot": "^1.1.5",
-    "node-forge": ">=0.10.0"
+    "elm-hot": "^1.1.5"
+  },
+  "resolutions": {
+    "node-forge": "0.10.0"
   }
 }
