🎨 format all Haskell files

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
     "terminal.integrated.shell.osx": "/bin/zsh",
-    "nixEnvSelector.nixFile": "${workspaceRoot}/default.nix"
+    "nixEnvSelector.nixFile": "${workspaceRoot}/default.nix",
+    "haskell.formattingProvider": "stylish-haskell"
 }
