--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "devDependencies": {
     "concurrently": "^5.3.0",
+    "elm-hot": "^1.1.6",
     "material-components-web-elm": "6.0.0"
   },
   "resolutions": {
