--- a/package.json
+++ b/package.json
@@ -26,13 +26,13 @@
   "homepage": "https://github.com/parry84/fidelio#readme",
   "dependencies": {
     "@material/typography": "^9.0.0",
+    "material-components-web-elm": "6.0.0",
     "node-elm-compiler": "^5.0.5",
     "parcel-bundler": "^1.12.4"
   },
   "devDependencies": {
     "concurrently": "^5.3.0",
-    "elm-hot": "^1.1.6",
-    "material-components-web-elm": "6.0.0"
+    "elm-hot": "^1.1.6"
   },
   "resolutions": {
     "node-forge": "0.10.0"
